--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 html {
     scroll-behavior: smooth;
   }
+body {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
   
   body {
     font-family: "Lato", sans-serif;
